--- a/src/lesson7/client/sample.fxml
+++ b/src/lesson7/client/sample.fxml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.PasswordField?>
 <VBox fx:id="vbox" alignment="center" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lesson7.client.Controller">
 
     <HBox fx:id="upperPanel">
-        <TextField HBox.hgrow="ALWAYS" promptText="Login" fx:id="loginField"/>
-        <PasswordField promptText="Password" fx:id="passwordField" onAction="#tryToAuth"/>
-        <Button text="Authorisation" onAction="#tryToAuth"/>
+        <TextField fx:id="loginField" promptText="Login" HBox.hgrow="ALWAYS" />
+        <PasswordField fx:id="passwordField" onAction="#tryToAuth" promptText="Password" />
+        <Button onAction="#tryToAuth" text="Authorisation" />
     </HBox>
-    <TextArea fx:id="textArea" editable="false" VBox.vgrow="ALWAYS" />
-    <HBox fx:id="bottomPanel" managed="false" visible="false">
-        <TextField fx:id="textField" promptText="Enter your message..." HBox.hgrow="ALWAYS" />
-        <Button fx:id="btn_sendMSg" onAction="#sendMsg" text="Send" textFill="Black" />
+
+    <HBox VBox.vgrow="ALWAYS">
+        <VBox HBox.hgrow="ALWAYS">
+            <TextArea fx:id="textArea" editable="false" VBox.vgrow="ALWAYS" />
+            <HBox fx:id="bottomPanel" managed="false" visible="false">
+                <TextField fx:id="textField" onAction="#sendMsg" promptText="Enter your message..." HBox.hgrow="ALWAYS" />
+                <Button fx:id="btn_sendMSg" onAction="#sendMsg" text="Send" textFill="Black" />
+            </HBox>
+        </VBox>
+            <VBox fx:id="listControlUsers" managed="false" visible="false">
+                <ListView fx:id="clientsList" managed="false" visible="false" onMouseClicked="#openPersonalChat"/>
+                <Button fx:id="btn_addToBL" text="Add to black list" visible="false" onAction="#addUserToBL"/>
+            </VBox>
     </HBox>
 </VBox>
